# fastapi-scaffold

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  NINJA-SCAFFOLD.md  QUICKSTART.md  README.md  VERIFICATION.md  _ninja-scaffold-landing.html  alembic.ini  docker-compose.yml  pyproject.toml  setup.sh
.github/workflows/: ci.yml
docs/: quickstart.html
src/fastapi_project/: config.py  database.py  dependencies.py  exceptions.py  main.py
src/fastapi_project/models/: user.py
src/fastapi_project/routes/: auth.py  health.py  users.py
src/fastapi_project/services/: user_service.py
tests/: conftest.py
tests/test_routes/: test_auth.py  test_health.py  test_users.py
